# pyckitup

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  run.py  server.py
ci/: script.sh
examples/: camera.py  clock.py  common.py  geometry.py  sound.py  sprites.py  text.py
include/: server.py
src/: anim.rs  main.rs  prelude.rs  qs.rs  resources.rs  sprites.rs
src/commands/: build.rs  init.rs  mod.rs
src/qs/: draw.rs  inits.rs  mod.rs  shapes.rs  utils.rs  window.rs
static/: index.html  run.py  template.html
