[package]
name = "pyckitup"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
rustpython_vm = { path = "../RustPython/vm", version = "*" }
num-traits = "0.2"
lazy_static = "1.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "*"
fs_extra = "1.1.0"
walkdir = "2"

[dependencies.quicksilver]
version = "0.3.7"
default-features = false
features = ["fonts", "sounds", "saving"]
